--- a/ui/html/pages/create.html
+++ b/ui/html/pages/create.html
@@ -1,9 +1,9 @@
 {{define "title"}}Create a New Snippet{{end}} 
 {{define "main"}}
 <form action="/snippet/create" method="POST">
+    <input type='hidden' name='csrf_token' value='{{.CSRFToken}}'>
   <div>
     <label>Title:</label>
-
     {{with .Form.FieldErrors.title}}
     <label class="error">{{.}}</label>
     {{end}}
